--- a/v03-argocd-applications/helm/nginx/values.yaml
+++ b/v03-argocd-applications/helm/nginx/values.yaml
@@ -28,7 +28,7 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext: 
   readOnlyRootFilesystem: true
   runAsNonRoot: true
   runAsUser: 1000
