--- a/v03-argocd-applications/helm/nginx/values.yaml
+++ b/v03-argocd-applications/helm/nginx/values.yaml
@@ -32,6 +32,7 @@ securityContext:
   readOnlyRootFilesystem: true
   runAsNonRoot: true
   runAsUser: 1000
+  allowPrivilegeEscalation: false
 
 service:
   type: ClusterIP
